--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 before_install:
-    - sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
-    - sudo apt-get -qq update
-
-install:
-    - sudo apt-get --yes install qt55base qt55imageformats qt55svg
-
-before_script:
-    - QTDIR="/opt/qt55"
-    - PATH="$QTDIR/bin:$PATH"
-    - source /opt/qt55/bin/qt55-env.sh	
+    - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+script:
+    - qmake -qt=qt5 -v
+    - qmake -qt=qt5
+- make
