--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ script:
     - qmake -qt=qt5 -v
     - qmake -qt=qt5
     - make
+    - cd TestTravisQt
+    - qmake -qt=qt5 -v
+    - qmake -qt=qt5
+    - make
